// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditTitleBar renders correctly when displayName is provided 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditTitleBar
    classes={
      Object {
        "itemSelect": Object {
          "itemSelStyle": "itemSel",
        },
        "section": Object {
          "sectionStyle": "section",
        },
        "title": Object {
          "titleStyle": "title",
        },
        "titleDescription": Object {
          "titleDescStyle": "titleDesc",
        },
      }
    }
    description="The blue one"
    displayName="Regnbue Dash"
    name="Rainbow Dash"
    onChangeDescription={[Function]}
    onChangeTitle={[Function]}
    style={
      Object {
        "description": Object {
          "abc": "123",
        },
        "title": Object {
          "xyz": "890",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className={
            Object {
              "titleDescStyle": "titleDesc",
            }
          }
        >
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              }
            }
            label="Dashboard title"
            multiline={true}
            name="Dashboard title input"
            onChange={[Function]}
            required={false}
            select={false}
            value="Rainbow Dash"
            variant="filled"
          />
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              }
            }
            label="Dashboard description"
            multiline={true}
            name="Dashboard description input"
            onChange={[Function]}
            required={false}
            rows="2"
            select={false}
            value="The blue one"
            variant="filled"
          />
        </div>,
        <div
          className={
            Object {
              "itemSelStyle": "itemSel",
            }
          }
        >
          <itemselect />
        </div>,
      ],
      "className": Object {
        "sectionStyle": "section",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard title"
              multiline={true}
              name="Dashboard title input"
              onChange={[Function]}
              required={false}
              select={false}
              value="Rainbow Dash"
              variant="filled"
            />,
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard description"
              multiline={true}
              name="Dashboard description input"
              onChange={[Function]}
              required={false}
              rows="2"
              select={false}
              value="The blue one"
              variant="filled"
            />,
          ],
          "className": Object {
            "titleDescStyle": "titleDesc",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "InputProps": Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              },
              "className": undefined,
              "label": "Dashboard title",
              "multiline": true,
              "name": "Dashboard title input",
              "onChange": [Function],
              "required": false,
              "select": false,
              "value": "Rainbow Dash",
              "variant": "filled",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "InputProps": Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              },
              "className": undefined,
              "label": "Dashboard description",
              "multiline": true,
              "name": "Dashboard description input",
              "onChange": [Function],
              "required": false,
              "rows": "2",
              "select": false,
              "value": "The blue one",
              "variant": "filled",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <itemselect />,
          "className": Object {
            "itemSelStyle": "itemSel",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "itemselect",
        },
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className={
              Object {
                "titleDescStyle": "titleDesc",
              }
            }
          >
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard title"
              multiline={true}
              name="Dashboard title input"
              onChange={[Function]}
              required={false}
              select={false}
              value="Rainbow Dash"
              variant="filled"
            />
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard description"
              multiline={true}
              name="Dashboard description input"
              onChange={[Function]}
              required={false}
              rows="2"
              select={false}
              value="The blue one"
              variant="filled"
            />
          </div>,
          <div
            className={
              Object {
                "itemSelStyle": "itemSel",
              }
            }
          >
            <itemselect />
          </div>,
        ],
        "className": Object {
          "sectionStyle": "section",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TextField
                InputProps={
                  Object {
                    "disableUnderline": true,
                    "style": Object {
                      "backgroundColor": "rgba(0, 0, 10, 0.05)",
                      "width": "100%",
                    },
                  }
                }
                label="Dashboard title"
                multiline={true}
                name="Dashboard title input"
                onChange={[Function]}
                required={false}
                select={false}
                value="Rainbow Dash"
                variant="filled"
              />,
              <TextField
                InputProps={
                  Object {
                    "disableUnderline": true,
                    "style": Object {
                      "backgroundColor": "rgba(0, 0, 10, 0.05)",
                      "width": "100%",
                    },
                  }
                }
                label="Dashboard description"
                multiline={true}
                name="Dashboard description input"
                onChange={[Function]}
                required={false}
                rows="2"
                select={false}
                value="The blue one"
                variant="filled"
              />,
            ],
            "className": Object {
              "titleDescStyle": "titleDesc",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "InputProps": Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                },
                "className": undefined,
                "label": "Dashboard title",
                "multiline": true,
                "name": "Dashboard title input",
                "onChange": [Function],
                "required": false,
                "select": false,
                "value": "Rainbow Dash",
                "variant": "filled",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "InputProps": Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                },
                "className": undefined,
                "label": "Dashboard description",
                "multiline": true,
                "name": "Dashboard description input",
                "onChange": [Function],
                "required": false,
                "rows": "2",
                "select": false,
                "value": "The blue one",
                "variant": "filled",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <itemselect />,
            "className": Object {
              "itemSelStyle": "itemSel",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "itemselect",
          },
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`EditTitleBar renders correctly when displayName not provided 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditTitleBar
    classes={
      Object {
        "itemSelect": Object {
          "itemSelStyle": "itemSel",
        },
        "section": Object {
          "sectionStyle": "section",
        },
        "title": Object {
          "titleStyle": "title",
        },
        "titleDescription": Object {
          "titleDescStyle": "titleDesc",
        },
      }
    }
    description="The blue one"
    name="Rainbow Dash"
    onChangeDescription={[Function]}
    onChangeTitle={[Function]}
    style={
      Object {
        "description": Object {
          "abc": "123",
        },
        "title": Object {
          "xyz": "890",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className={
            Object {
              "titleDescStyle": "titleDesc",
            }
          }
        >
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              }
            }
            label="Dashboard title"
            multiline={true}
            name="Dashboard title input"
            onChange={[Function]}
            required={false}
            select={false}
            value="Rainbow Dash"
            variant="filled"
          />
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              }
            }
            label="Dashboard description"
            multiline={true}
            name="Dashboard description input"
            onChange={[Function]}
            required={false}
            rows="2"
            select={false}
            value="The blue one"
            variant="filled"
          />
        </div>,
        <div
          className={
            Object {
              "itemSelStyle": "itemSel",
            }
          }
        >
          <itemselect />
        </div>,
      ],
      "className": Object {
        "sectionStyle": "section",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard title"
              multiline={true}
              name="Dashboard title input"
              onChange={[Function]}
              required={false}
              select={false}
              value="Rainbow Dash"
              variant="filled"
            />,
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard description"
              multiline={true}
              name="Dashboard description input"
              onChange={[Function]}
              required={false}
              rows="2"
              select={false}
              value="The blue one"
              variant="filled"
            />,
          ],
          "className": Object {
            "titleDescStyle": "titleDesc",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "InputProps": Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              },
              "className": undefined,
              "label": "Dashboard title",
              "multiline": true,
              "name": "Dashboard title input",
              "onChange": [Function],
              "required": false,
              "select": false,
              "value": "Rainbow Dash",
              "variant": "filled",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "InputProps": Object {
                "disableUnderline": true,
                "style": Object {
                  "backgroundColor": "rgba(0, 0, 10, 0.05)",
                  "width": "100%",
                },
              },
              "className": undefined,
              "label": "Dashboard description",
              "multiline": true,
              "name": "Dashboard description input",
              "onChange": [Function],
              "required": false,
              "rows": "2",
              "select": false,
              "value": "The blue one",
              "variant": "filled",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <itemselect />,
          "className": Object {
            "itemSelStyle": "itemSel",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "itemselect",
        },
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className={
              Object {
                "titleDescStyle": "titleDesc",
              }
            }
          >
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard title"
              multiline={true}
              name="Dashboard title input"
              onChange={[Function]}
              required={false}
              select={false}
              value="Rainbow Dash"
              variant="filled"
            />
            <TextField
              InputProps={
                Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                }
              }
              label="Dashboard description"
              multiline={true}
              name="Dashboard description input"
              onChange={[Function]}
              required={false}
              rows="2"
              select={false}
              value="The blue one"
              variant="filled"
            />
          </div>,
          <div
            className={
              Object {
                "itemSelStyle": "itemSel",
              }
            }
          >
            <itemselect />
          </div>,
        ],
        "className": Object {
          "sectionStyle": "section",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TextField
                InputProps={
                  Object {
                    "disableUnderline": true,
                    "style": Object {
                      "backgroundColor": "rgba(0, 0, 10, 0.05)",
                      "width": "100%",
                    },
                  }
                }
                label="Dashboard title"
                multiline={true}
                name="Dashboard title input"
                onChange={[Function]}
                required={false}
                select={false}
                value="Rainbow Dash"
                variant="filled"
              />,
              <TextField
                InputProps={
                  Object {
                    "disableUnderline": true,
                    "style": Object {
                      "backgroundColor": "rgba(0, 0, 10, 0.05)",
                      "width": "100%",
                    },
                  }
                }
                label="Dashboard description"
                multiline={true}
                name="Dashboard description input"
                onChange={[Function]}
                required={false}
                rows="2"
                select={false}
                value="The blue one"
                variant="filled"
              />,
            ],
            "className": Object {
              "titleDescStyle": "titleDesc",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "InputProps": Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                },
                "className": undefined,
                "label": "Dashboard title",
                "multiline": true,
                "name": "Dashboard title input",
                "onChange": [Function],
                "required": false,
                "select": false,
                "value": "Rainbow Dash",
                "variant": "filled",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "InputProps": Object {
                  "disableUnderline": true,
                  "style": Object {
                    "backgroundColor": "rgba(0, 0, 10, 0.05)",
                    "width": "100%",
                  },
                },
                "className": undefined,
                "label": "Dashboard description",
                "multiline": true,
                "name": "Dashboard description input",
                "onChange": [Function],
                "required": false,
                "rows": "2",
                "select": false,
                "value": "The blue one",
                "variant": "filled",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <itemselect />,
            "className": Object {
              "itemSelStyle": "itemSel",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "itemselect",
          },
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
